@@ -1,3 +1,6 @@
-- "Buffer management"
-- "preload sample" thing
+Nothing.
+
+But I will change to the next generation audio server maudioII after KDE1.1.
+So stay tuned.
+                                                           Christian Esken
 
